# Polls

./: .gitignore  README.rst  local.yml  production.yml  pyproject.toml  staging.yml
.envs/.production/: .django  .postgres
compose/local/django/: Dockerfile
compose/production/django/: Dockerfile
compose/production/traefik/: traefik.toml
compose/staging/django/: Dockerfile  start
compose/staging/django/celery/beat/: start
compose/staging/django/celery/worker/: start
compose/staging/nginx/: nginx.conf
config/: router.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  staging.py  test.py
docs/: conf.py  index.rst
polls/contrib/sites/migrations/: 0003_set_site_domain_and_name.py  0004_auto_20201016_1533.py
polls/core/: filters.py
polls/core/api/: permissions.py
polls/pollsapp/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py  viewsets.py
polls/pollsapp/migrations/: 0001_initial.py
polls/pollsapp/templates/pollsapp/: detail.html  index.html  results.html
polls/pollsapp/tests/: test_api.py  test_app.py
polls/templates/: base.html
polls/templates/admin/: base.html
polls/users/: admin.py  apps.py  forms.py  helpers.py  models.py  views.py
polls/users/api/v1/: serializers.py  viewsets.py
polls/users/migrations/: 0001_initial.py  0002_auto_20201016_1533.py  0003_auto_20201028_0945.py
polls/users/tests/: factories.py  test_api.py
scripts/: deploy.sh
